# rocket-login

./: Cargo.toml  diesel.toml
migrations/2024-10-22-051556_create_users/: up.sql
src/: db.rs  main.rs
src/db/: models.rs
src/routes/: user.rs
